Correct flex shrink code!

--- a/root/flex-shrink.scss
+++ b/root/flex-shrink.scss
@@ -5,11 +5,13 @@
 }
 
 .item {
+  flex-grow: 1;
   flex-shrink: 0;
+  flex-basis: auto;
 }
 
 .item.two {
-  flex-shrink: 2;
+  flex-shrink: 5;
 }
 
 /**
